tests/paczka1/small_fuzzy/73860673.err
Error in line 10: S485 S292 78,3
Error in line 6: 87iwZDR S485 27,5
